<resources>
    <string name="app_name">Money Track</string>
    <string name="country_prompt">Choose a country</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintPass">Password</string>
    <string name="btLogin">Log In</string>
    <string name="btSignUp">Sign Up</string>
    <string name="forget_password">Forget your Password?</string>
    <string name="check_remember_me">Remember me</string>
    <string name="TestAdmobBanner1">ca-app-pub-6982512613810746/8822565868</string>
    <string name="TestAdmobAppId">ca-app-pub-6982512613810746~5651631132</string>
    <string name="TestAdmobInter1">ca-app-pub-6982512613810746/5911485582</string>
    <string name="firebaseDbUsed">users</string>


    <string-array name="country_arrays">
        <item>Vegetable</item>
        <item>Chicken</item>
        <item>Dmart</item>
        <item>Water</item>
        <item>Rent</item>
        <item>Massi</item>
        <item>Maintaince</item>
        <item>Other</item>
    </string-array>

    <string-array name="role_arrays">
        <item>Select Your Role</item>
        <item>Admin</item>
        <item>User</item>
    </string-array>
</resources>
