<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical"
    tools:context=".SignUp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textColor="@color/whiteColor"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:id="@+id/signupappname"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/moneyiconwhite"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_account_circle_white_24dp"
            android:drawableStart="@drawable/ic_account_circle_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:id="@+id/SignUpName"
            android:textColorHint="#FFF"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Mobile"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="8dp"
            android:id="@+id/SignUpMobile"
            android:textColorHint="#FFF"
            android:maxLength="10"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/baseline_email_white_24dp"
            android:drawableStart="@drawable/baseline_email_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:id="@+id/SignUpEmail"
            android:textColorHint="#FFF"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF" />




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/baseline_lock_white_24dp"
            android:drawableStart="@drawable/baseline_lock_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#FFF"
            android:layout_marginTop="5dp"
            android:id="@+id/SignUpPass"
            android:maxLength="14"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF" />
        <Spinner
            android:id="@+id/RoleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_lock_white_24dp"
            android:drawableStart="@drawable/baseline_lock_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:popupBackground="@drawable/gradientbackground"
            android:layout_marginTop="5dp"

            android:gravity="center"
            android:prompt="@string/country_prompt" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/baseline_email_white_24dp"
            android:drawableStart="@drawable/baseline_email_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Group Code"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:id="@+id/SignUpGroupCode"
            android:visibility="gone"
            android:textColorHint="#FFF"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Verify code"
            android:padding="10sp"
            android:textColor="#fff"
            android:layout_marginLeft="10sp"
                android:id="@+id/verifyGroupCode"
                android:clickable="true"
                android:visibility="gone"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/baseline_email_white_24dp"
            android:drawableStart="@drawable/baseline_email_white_24dp"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Group Name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:id="@+id/SignUpGroupName"
            android:visibility="gone"
            android:textColorHint="#FFF"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF" />




        <ProgressBar
            android:id="@+id/SignUpProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:background="@drawable/background_login"
            android:text="@string/btSignUp"
            android:clickable="true"
            android:padding="16dp"
            android:textAllCaps="false"
            android:textColor="@color/startRed"
            android:textSize="18sp"
            android:id="@+id/SignUpBtn"
            android:layout_marginTop="8dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttonstyletail"
            android:clickable="true"
            android:padding="16dp"
            android:text="@string/btLogin"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            android:id="@+id/GoToLoginPage"
            />



    </LinearLayout>

</LinearLayout>
